--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
   </div><br><br>
 
   <p>My Projects</p>
-    **<a href="https://tonyojelel.github.io/myproject.github.io/" target="_blank">React Bootstrap admin starter template</a>
+  <a href="https://tonyojelel.github.io/Collision.github.io/" target="_blank">Collision Detection</a>
+<br><br>
+    <a href="https://tonyojelel.github.io/myproject.github.io/" target="_blank">React Bootstrap 
+      admin starter template</a>
 
 
     <p><br>Phone +256-752-298-936</P>
