--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
   </div><br><br>
 
   <p>My Projects</p>
+  <a href="https://tonyojelel.github.io/Solar3D.github.io/" target="_blank">3D Solar System</a>
+  <br><br>
+
   <a href="https://tonyojelel.github.io/Collision.github.io/" target="_blank">Collision Detection</a>
 <br><br>
     <a href="https://tonyojelel.github.io/myproject.github.io/" target="_blank">React Bootstrap 
