--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <title>My Profile</title>
   <link rel="stylesheet" href="styles.css" />
-  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3630737077601260"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="background">
